pulldown-cmark-mdcat/tests/snapshots/render/dumb@samples-tasklist.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/samples/tasklist.md
---
• [✓] foo

  • [ ] bar
  • [✓] baz

• [ ] test

  • [ ] test1
  • [ ] test2
