pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-003-tabs.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/003-tabs.md
---

[33ma	a
[0m[33mὐ	a
[0m
